# FindTheHoleGame

./: CMakeLists.txt  GRADE.md  Gemfile  Vagrantfile  install_build.sh
docs/: PROPOSAL.md  SPECIFICATIONS.md  _config.yml  index.md
src/scrMain/: Board.cpp  Board.h  Menu.cpp  Menu.h  PlayGame.cpp  PlayGame.h  Player.cpp  Player.h  TurnOnGame.out  main.cpp
src/scrTest/: test.cpp  test_Board.out  test_Game.cpp  test_Game.out  test_board.cpp  test_driver.cpp  test_driver_copy.cpp
src/tests/: tests.cpp
